# host_packages

ardrone_tutorials/launch/: keyboard_controller.launch  keyboard_controller_wifi_network.launch~
ardrone_tutorials/src/: drone_controller.py  keyboard_controller.py
object_list/: CMakeLists.txt  README.md  package.xml
object_list/src/: object_list.py
task2_tb_slam/: CMakeLists.txt  package.xml
task2_tb_slam/launch/: launch_host.launch  launch_tb.launch  tb_amcl_depth.launch
task2_tb_slam/src/: tb_path_publisher.py  tb_rviz_interaction.py
task3_opencv/: CMakeLists.txt  package.xml
task3_opencv/src/: april_tag_detection.cpp  april_tag_detection_turtlebot.cpp  hsv_picker.py  shape_detection.py  shape_detection_2.py  shape_detection_drone.py
task3_pcl/: CMakeLists.txt  README.md  package.xml
task3_pcl/parameters/: PCL_ground_removal.yaml  PCL_object_clustering.yaml  PCL_subsampler.yaml
task3_pcl/src/: PCL_ground_removal.cpp  PCL_object_clustering.cpp  PCL_subsampler.cpp  PCL_transform.cpp
task3_pcl/src/headers/: PCL_object_clustering.h  PCL_subsampler.h  PCL_transform.h
wasp_custom_msgs/: CMakeLists.txt  README.md  package.xml
wasp_rosbags/: README.md
