<?xml version="1.0"?>
<package>
  <name>object_list</name>
  <version>0.0.0</version>
  <description>The object_list package</description>

  <maintainer email="vlali@kth.se">VladimirLi</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>


  <export>

  </export>
</package>
