<?xml version="1.0"?>
<package>
  <name>wasp_custom_msgs</name>
  <version>0.0.0</version>
  <description>The wasp_custom_msgs package</description>

  <maintainer email="vlali@kth.se">VladimirLi</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
